# colt

./: .gitignore  CMakeLists.txt  Makefile  README.md  colt.c  config.mk
src/: main.c
